--- a/app/NLP/Report PA processing.ipynb
+++ b/app/NLP/Report PA processing.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "ac9ec781",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "7a66a015",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "660dc80c",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "70f83d20",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "4b1dc0af",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "ad78b199",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "c12ab4c8",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "'based on Austria latest biennial report to the UNFCCC , here is some information on Austria financial resources provided and received to support climate action: 1. Public Climate Finance: In 2018, Austria provided a total of €176.3 million in public climate finance, of which €93.3 million  was dedicated to mitigation measures and €83 million  was allocated for adaptation measures. 2. International Climate Finance: Austria has provided support for international climate action through contributions to the Green Climate Fund  and other multilateral climate funds. Austria pledged €85 million to the GCF for the period 2015 2018 and €115 million for the period 2019 2023. 3. Renewable Energy and Energy Efficiency: Austria has provided financial support for renewable energy and energy efficiency measures, such as feed in tariffs and subsidies for renewable energy installations, energy efficiency improvements in buildings, and support for research and development of sustainable technologies. 4. Sustainable Transport: Austria has implemented policies and measures to support sustainable transport, including investments in public transport infrastructure and the promotion of electric vehicles. 5. Adaptation Measures: Austria has allocated financial resources to support adaptation measures, such as flood protection, drought management, and ecosystem based adaptation approaches. 6. Support for Vulnerable Communities: Austria has provided financial support for vulnerable communities to adapt to the impacts of climate change, such as through community based adaptation measures and support for climate resilient livelihoods. It is important to note that these financial resources are intended to support Austria overall climate action efforts, and may not be specific to Vienna. However, as the capital and largest city in Austria, Vienna may have received a portion of these financial resources and implemented its own climate policies and measures.'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "ee4b87bd",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "10fc669b",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        " 'However, as the capital and largest city in Austria, Vienna may have received a portion of these financial resources and implemented its own climate policies and measures.']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "85849192",
    "metadata": {},
    "outputs": [],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "25f0a1bc",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "10"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "e2f77d48",
    "metadata": {},
    "outputs": [
@@ -739,9 +739,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dorra\\AppData\\Local\\Temp\\ipykernel_11060\\2977631163.py:11: DeprecationWarning: Flags not at the start of the expression '\\\\b(?i)for\\\\b' but at position 2\n",
+      "C:\\Users\\dorra\\AppData\\Local\\Temp\\ipykernel_30088\\2977631163.py:11: DeprecationWarning: Flags not at the start of the expression '\\\\b(?i)for\\\\b' but at position 2\n",
       "  if re.search(pat, text) != None:\n",
-      "C:\\Users\\dorra\\AppData\\Local\\Temp\\ipykernel_11060\\2977631163.py:11: DeprecationWarning: Flags not at the start of the expression '\\\\b(?i)to\\\\b' but at position 2\n",
+      "C:\\Users\\dorra\\AppData\\Local\\Temp\\ipykernel_30088\\2977631163.py:11: DeprecationWarning: Flags not at the start of the expression '\\\\b(?i)to\\\\b' but at position 2\n",
       "  if re.search(pat, text) != None:\n"
      ]
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "3e9b7994",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
        "9  However, as the capital and largest city in Au...              0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,38 +877,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 57,
    "id": "9ca24abc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "5\n",
-      "1\n",
-      "5\n",
-      "2\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from spacy.matcher import Matcher\n",
-    "# to extract initiatives using pattern matching\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
     "def all_schemes(text, check):\n",
     "    schemes = []\n",
+    "    funding = {}\n",
     "    doc = nlp(text)\n",
-    "    \n",
-    "#     for token in doc:\n",
-    "#         print(token.text,'->',token.pos_)\n",
-    "    \n",
+    "\n",
     "    prog_list = ['dedicated to', 'contributed to', 'support for', 'contributions to', 'aid for']\n",
-    "    pattern = [{'POS': 'NOUN'}, {'POS': 'NOUN'}]\n",
+    "    pattern = [{\"POS\": \"ADP\"}, {\"POS\" : \"NOUN\"}, {\"POS\" : \"NOUN\"}]\n",
+    "    funding_pattern = [{\"TEXT\": {\"REGEX\": \"\\d+(\\.\\d+)?\\s*[€|$]\"}}]\n",
+    "    year_pattern = [{\"TEXT\": {\"REGEX\": \"20[1-2]\\d\"}}]\n",
     "\n",
     "    if check == 0:\n",
     "        return schemes\n",
@@ -916,39 +902,50 @@
     "    matcher = Matcher(nlp.vocab)\n",
     "    matcher.add(\"matching\", [pattern])\n",
     "    matches = matcher(doc)\n",
-    "    print(len(matches))\n",
+    "    \n",
+    "    funding_matcher = Matcher(nlp.vocab)\n",
+    "    funding_matcher.add(\"funding_matching\", [funding_pattern, year_pattern])\n",
     "\n",
     "    for match_id, start, end in matches:\n",
-    "        noun_phrase = doc[start:end]\n",
-    "        scheme = noun_phrase.text[len(prog_list[-1])+1:]\n",
+    "        noun_phrase = doc[start+1:end]\n",
+    "        scheme = noun_phrase.text\n",
     "        schemes.append(scheme.strip())\n",
+    "        \n",
+    "    funding_matches = funding_matcher(doc)\n",
     "\n",
-    "    return schemes\n",
+    "    for funding_match_id, funding_start, funding_end in funding_matches:\n",
+    "            funding_value = doc[funding_start:funding_end].text.strip()\n",
+    "            funding_year = doc[funding_end:funding_end+1].text.strip()\n",
+    "            funding[(scheme.strip(), funding_year)] = funding_value\n",
+    "\n",
+    "    return schemes, funding\n",
     "\n",
     "# apply function\n",
-    "df2['Schemes1'] = df2.apply(lambda x:all_schemes(x.sentence,x.Check_Schemes),axis=1)"
+    "# df2['Schemes1'] = df2.apply(lambda x:all_schemes(x.sentence,x.Check_Schemes),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d49d606",
+   "metadata": {},
+   "source": [
+    "Debugging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 58,
    "id": "8830e635",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['on measures', 'on measures']"
+       "(['mitigation measures', 'adaptation measures'],\n",
+       " {('adaptation measures', ','): '2018'})"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,12 +955,16 @@
     "finance, of which €93.3 million (53%) was dedicated to mitigation measures and €83 million\n",
     "(47%) was allocated for adaptation measures.\"\"\"\n",
     "check = 1\n",
-    "all_schemes(text, check)"
+    "all_schemes(text, check)\n",
+    "# doc = nlp(text)\n",
+    "    \n",
+    "# for token in doc:\n",
+    "#       print(token.text,'->',token.pos_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 48,
    "id": "2f215f75",
    "metadata": {},
    "outputs": [
@@ -998,55 +999,55 @@
        "      <th>0</th>\n",
        "      <td>based on Austria latest biennial report to the...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[iennial report, report, , ormation, ion, l re...</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Public Climate Finance: In 2018, Austria provi...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[, , c climate, limate, , c climate finance, l...</td>\n",
+       "      <td>[mitigation measures, adaptation measures]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>International Climate Finance: Austria has pro...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[, rnational climate, ional climate, , rnation...</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Austria pledged €85 million to the GCF for the...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[period, od, , period, od, ]</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Renewable Energy and Energy Efficiency: Austri...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[l support, , wable energy, e energy, , , ffic...</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Sustainable Transport: Austria has implemented...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[ble Transport, t, , , ble transport, t, nts, ...</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Adaptation Measures: Austria has allocated fin...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[on, on Measures, , l resources, s, on, on mea...</td>\n",
+       "      <td>[flood protection]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Support for Vulnerable Communities: Austria ha...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[, l support, , erable communities, le communi...</td>\n",
+       "      <td>[climate change]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>It is important to note that these financial r...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[nancial resources, l resources, s, climate, ,...</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1071,20 +1072,20 @@
        "8  It is important to note that these financial r...              1   \n",
        "9  However, as the capital and largest city in Au...              0   \n",
        "\n",
-       "                                            Schemes1  \n",
-       "0  [iennial report, report, , ormation, ion, l re...  \n",
-       "1  [, , c climate, limate, , c climate finance, l...  \n",
-       "2  [, rnational climate, ional climate, , rnation...  \n",
-       "3                       [period, od, , period, od, ]  \n",
-       "4  [l support, , wable energy, e energy, , , ffic...  \n",
-       "5  [ble Transport, t, , , ble transport, t, nts, ...  \n",
-       "6  [on, on Measures, , l resources, s, on, on mea...  \n",
-       "7  [, l support, , erable communities, le communi...  \n",
-       "8  [nancial resources, l resources, s, climate, ,...  \n",
-       "9                                                 []  "
+       "                                     Schemes1  \n",
+       "0                                          []  \n",
+       "1  [mitigation measures, adaptation measures]  \n",
+       "2                                          []  \n",
+       "3                                          []  \n",
+       "4                                          []  \n",
+       "5                                          []  \n",
+       "6                          [flood protection]  \n",
+       "7                            [climate change]  \n",
+       "8                                          []  \n",
+       "9                                          []  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
